# mulsbc_ws

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ruff.toml
.claude/skills/update-doc/: SKILL.md
bags/2026-04-28_10-38-14/: git_diff.txt
bags/2026-04-28_10-38-14/bag/: metadata.yaml
bags/2026-04-28_16-08-13/: git_diff.txt
bags/2026-04-28_16-08-13/bag/: bag_0.db3  metadata.yaml
docker/: Dockerfile  build.bash  docker-compose.yaml  run.bash
docs/: README.md  usage_guide.md
scripts/: stop.py  test_motor.py
src/: README.md
src/omni_controller/: CMakeLists.txt  README.md  omni_controller.xml  package.xml
src/omni_controller/config/: omnicar.yaml  omniquad.yaml
src/omni_controller/include/omni_controller/: omni_controller.hpp  wheel_ik.hpp
src/omni_controller/src/: omni_controller.cpp  wheel_ik.cpp
src/omni_controller/test/: test_wheel_ik.cpp
src/omni_vel_controller/: CMakeLists.txt  README.md  omni_vel_controller.xml  package.xml
src/omni_vel_controller/config/: omnicar.yaml  omniquad.yaml
src/omni_vel_controller/include/omni_vel_controller/: omni_vel_controller.hpp
src/omni_vel_controller/launch/: omni_vel_controller.launch.py
src/omni_vel_controller/src/: omni_vel_controller.cpp
src/pi3hat/: README.md
src/pi3hat/moteus_pi3hat/: CMakeLists.txt  README.md  package.xml
src/pi3hat/moteus_pi3hat/include/moteus_pi3hat/: moteus.h  moteus_multiplex.h  moteus_optional.h  moteus_protocol.h  moteus_tokenizer.h  moteus_transport.h  pi3hat.h  pi3hat_moteus_transport.h  power_distributor_protocol.h  realtime.h
src/pi3hat/moteus_pi3hat/src/: pi3hat.cc  pi3hat_tool.cc
src/pi3hat/pi3hat_base_controller/: CMakeLists.txt  README.md  package.xml  pi3hat_base_controller.xml
src/pi3hat/pi3hat_base_controller/include/pi3hat_base_controller/: distributor_state_broadcaster.hpp  moteus_debug.hpp  pi3hat_joint_group_controller.hpp  pi3hat_state_broadcaster.hpp
src/pi3hat/pi3hat_base_controller/src/: distributor_state_broadcaster.cpp  moteus_debug.cpp  pi3hat_joint_group_controller.cpp  pi3hat_state_broadcaster.cpp
src/pi3hat/pi3hat_hw_interface/: CMakeLists.txt  README.md  moteus_pi3hat_interface.xml  package.xml
src/pi3hat/pi3hat_hw_interface/config/: Omnicar.yaml  arm.yaml  jump_leg.yaml  omnicar.yaml  omnicar_arm.yaml  omniquad.yaml  omniquad12.yaml  omnirace.yaml  single_joint.yaml  softleg.yaml
src/pi3hat/pi3hat_hw_interface/include/pi3hat_hw_interface/: actuator_manager.hpp  elem_info_parsers.hpp  moteus_pi3hat_interface.hpp
src/pi3hat/pi3hat_hw_interface/launch/: moteus_pi3hat_interface.launch.py
src/pi3hat/pi3hat_hw_interface/src/: actuator_manager.cpp  moteus_pi3hat_interface.cpp  pm_transport_node.cpp
src/pi3hat/pi3hat_hw_interface/urdf/: Omnicar.xacro  SingleJoint.xacro  SingleJointSE.xacro  SoftLeg.xacro  arm.xacro  omnicar.xacro  omnicar_arm.xacro  omniquad12.xacro
src/pi3hat/pi3hat_moteus_int_msgs/: CMakeLists.txt  README.md  package.xml
src/pi3hat/pi3hat_moteus_int_msgs/msg/: DistributorsState.msg  JointsStates.msg  PacketPass.msg
src/pi3hat_hw_interface/config/: Omnicar.yaml  jump_leg.yaml  single_joint.yaml
src/pi3hat_hw_interface/urdf/: 8DOF_mul_off.urdf.xacro  JumpingLeg2d.urdf.xacro  Omnicar.urdf.xacro  SingleJoint.urdf.xacro  SingleJointSE.urdf.xacro
src/pi3hat_moteus_int_msgs/: package.xml
