<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>omni_vel_controller</name>
    <version>0.0.0</version>
    <description>Omnidirectional wheel velocity controller for Mulinex robot</description>
    <maintainer email="cionix90@gmail.com">punk-opc</maintainer>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>pluginlib</depend>
    <depend>pi3hat_moteus_int_msgs</depend>
    <depend>std_srvs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>

    <build_depend>eigen</build_depend>
    <build_export_depend>eigen</build_export_depend> <!-- If your package uses Eigen3 in public headers, then also add these tags so downstream packages also depend on this package and Eigen3. -->

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
