<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi3hat_hw_interface</name>
  <version>0.0.0</version>
  <description>ros2_control SystemInterface plugin for Pi3Hat + Moteus hardware</description>
  <maintainer email="cionix90@gmail.com">jacopocioni</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>moteus_pi3hat</depend>
  <depend>pi3hat_moteus_int_msgs</depend>
  <depend>eigen3</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rosbag2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
